Restructure Lexers Cleanup